zeit.content.cp changes
=======================

0.42.1 (unreleased)
-------------------

- TeaserBockProxy adapts to ICommonMetadata now. 

- Freie Teaser werden jetzt nur noch in der CP gespeichert. Es gibt keine extra
  Objekte im DAV mehr dafür (#7826)

- Das Raw-Modul kann jetzt auch im Aufmacher verwendet werden (#8781)


0.42.0 (2010-08-16)
-------------------

- Reichweite im CPE anzeigen (#7560).

- Für Teaserbilder wird als Fallback jetzt @@preview  verwendet (#7798).


0.41.0 (2010-08-09)
-------------------

- ``cms_content_iter`` funktioniert jetzt auch, wenn eine CP ein Modul enthält,
  welches das CMS nicht kennt (#7727).
- Für Selenium-Tests wird nun ``gocept.selenium`` verwendet (#7549).
- Auch gesperrte, oder anderweitig nicht auscheckbare Objekte, haben beim
  Bearbeiten einer Teaser-Liste jetzt das Icon "in neuem Fenster öffnen"
  (#7825).



0.40.0 (2010-07-07)
-------------------

- Warnung bei Änderungen, wenn ein freier Teaser zu einem Artikel existiert
  (#6415).


0.39.0 (2010-07-07)
-------------------

- Fehler bei Regeln ("cp_type is undefined") verhindern (#7444).
- Stabilieres Quick-Publish (#7433).
- Aktualisieren des RSS-Feeds in der CP führt nicht mehr zu ConflictError
  (#7587)


0.38.0 (2010-06-09)
-------------------

- Prevent error during refresh when feed cannot be checked out (#7313).
- Participate in the zeit.relation index (for #6160).
- New properties for RSS-Block: show_supertitle (#7390), time_format (#6936).
- Update Header-Image/Snapshot XML reference if image metadata change (#7402).


0.37.0 (2010-06-02)
-------------------

- Header-Image und Snapshot werden im XML anstatt im DAV gespeichert (#7325).
- Fehler bei Regeln ("cp_type is undefined") verhindern (#7192).


0.36.0 (2010-05-18)
-------------------

- RSS-Block: Felder für Feed-Icon und Teaserbild (#7259).


0.35.1 (2010-05-17)
-------------------

- Fixed test for zeit.brightcove >= 0.3.0 (#7241)


0.35.0 (2010-05-03)
-------------------
